@@ -1,0 +1,10 @@
+This is some text that has a footnote.[^1]
+
+[^1]: This is the first sentence of the note.
+    This is the second sentence of the note.
+
+    This is the third sentence of the note.
+    This is the fourth sentence of the note.
+
+This is the fisrt sentence that's not the note.
+This is the second sentence that's not the note.
