@@ -1,0 +1,1 @@
+wrap | /dev/null | -u | md-footnote-02.md | 0
