@@ -1,0 +1,1 @@
+wrapc | /dev/null | -u | md-footnote-01.c | 0
